2022-02-06  Alexey Shvayka  <ashvayka@apple.com>

        Object literal doesn't properly resolve name clash between an accessor and a constant property
        https://bugs.webkit.org/show_bug.cgi?id=220574

        Reviewed by Yusuke Suzuki.

        * stress/class-static-accessor-name-clash-with-field.js: Added.
        * stress/object-literal-accessor-name-clash-with-constant.js: Added.

2022-02-05  Alexey Shvayka  <ashvayka@apple.com>

        Attempting to [[Set]] JSArray's read-only "length" should throw even with current [[Value]]
        https://bugs.webkit.org/show_bug.cgi?id=221177

        Reviewed by Saam Barati.

        * stress/array-prototype-methods-set-length.js: Added.

2022-02-04  Yusuke Suzuki  <ysuzuki@apple.com>

        WeakRef deref can return null instead of undefined
        https://bugs.webkit.org/show_bug.cgi?id=235880

        Reviewed by Sam Weinig and Alexey Shvayka.

        * stress/v8-finalizationregistry-and-weakref.js:
        (setTimeout):

2022-02-02  Alexey Shvayka  <ashvayka@apple.com>

        Speed-up JSON.stringify() by avoiding "toJSON" property lookups
        https://bugs.webkit.org/show_bug.cgi?id=235996

        Reviewed by Saam Barati.

        * microbenchmarks/json-stringify-many-objects-to-json.js:
        Make this test a little more realistic by moving "toJSON" onto prototype.

        * microbenchmarks/vanilla-todomvc-json-stringify.js: Added.

2022-02-02  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] wasm atomic opcodes should be rejected if alignment is not equal to natural width
        https://bugs.webkit.org/show_bug.cgi?id=235990

        Reviewed by Saam Barati.

        * wasm/stress/invalid-atomic-alignment.js: Added.
        (async buildAndThrow):

2022-02-01  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r288538.
        https://bugs.webkit.org/show_bug.cgi?id=235968

        `Array#groupBy` name has web-compat issue