@@ -1,0 +1,18 @@
+/*
+(module
+  (type $ii (func (param i32) (result i32)))
+
+  (func (export "null") (result i32)
+    (call_ref (i32.const 1) (ref.null $ii))
+  )
+)
+
+(assert_trap (invoke "null") "null function")
+*/
+
+// call-null-ref.wast:1
+let $1 = instance("\x00\x61\x73\x6d\x01\x00\x00\x00\x01\x8a\x80\x80\x80\x00\x02\x60\x01\x7f\x01\x7f\x60\x00\x01\x7f\x03\x82\x80\x80\x80\x00\x01\x01\x07\x88\x80\x80\x80\x00\x01\x04\x6e\x75\x6c\x6c\x00\x00\x0a\x8d\x80\x80\x80\x00\x01\x87\x80\x80\x80\x00\x00\x41\x01\xd0\x00\x14\x0b");
+
+// call-null-ref.wast:9
+for (let i = 0; i < 1e4; ++i)
+    assert_trap(() => call($1, "null", []));
